# controllers/profile.go
@@ -3,6 +3,7 @@ package controllers
 import (
 	"backend/models"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -17,6 +18,9 @@ import (
 // @Security ApiKeyAuth
 // @Router /profile [get]
 func UserProfile(ctx *gin.Context) {
+	// if ctx.Request.Header.Get("Authorization") == "" {
+
+	// }
 	val, isAvail := ctx.Get("userid")
 	userId := int(val.(float64))
 
@@ -29,4 +33,39 @@ func UserProfile(ctx *gin.Context) {
 			Result:  profile,
 		})
 	}
+}
+
+// Profile godoc
+// @Schemes
+// @Description Profile Users
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "Detail User"
+// @Success 200 {object} TaskResponse2{result=models.Gabung}
+// @Security ApiKeyAuth
+// @Router /users/detail/{id} [get]
+func UserProfile2(ctx *gin.Context) {
+	iddb, _ := strconv.Atoi(ctx.Param("id"))
+	user := models.UserById(iddb)
+	if user == (models.Gabung{}) {
+		ctx.JSON(http.StatusBadRequest, TaskResponse2{
+			Success: false,
+			Message: "invalid add user",
+			Result:  iddb,
+		})
+		return
+	}
+	// val, isAvail := ctx.Get("userid")
+	// userId := int(val.(float64))
+
+	profile := models.UserById(iddb)
+
+	// if isAvail {
+	ctx.JSON(http.StatusOK, TaskResponse2{
+		Success: true,
+		Message: "User Id",
+		Result:  profile,
+	})
+	// }
 }
