# docs/swagger.json
@@ -852,6 +852,54 @@
                 }
             }
         },
+        "/users/detail/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Profile Users",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Detail User",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/controllers.TaskResponse2"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/models.Gabung"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/users/{id}": {
             "delete": {
                 "security": [
@@ -987,23 +1035,23 @@
         "controllers.PageInfo": {
             "type": "object",
             "properties": {
-                "currentPage": {
+                "currentpage": {
                     "type": "integer",
                     "example": 1
                 },
-                "nextPage": {
+                "nextpage": {
                     "type": "integer",
                     "example": 102
                 },
-                "prevPage": {
+                "prevpage": {
                     "type": "integer",
                     "example": 0
                 },
-                "totalData": {
+                "totaldata": {
                     "type": "integer",
                     "example": 101
                 },
-                "totalPage": {
+                "totalpage": {
                     "type": "integer",
                     "example": 1
                 }
@@ -1039,6 +1087,10 @@
         "models.Allmovie": {
             "type": "object",
             "properties": {
+                "duration": {
+                    "type": "string",
+                    "example": "22:10:33"
+                },
                 "genre": {
                     "type": "string",
                     "example": "Action, Advanture"
@@ -1050,6 +1102,10 @@
                 "image_movie": {
                     "type": "string",
                     "example": "b00db012-1a27-43b3-895a-abd3f540362e.jpg"
+                },
+                "release_date": {
+                    "type": "string",
+                    "example": "2006-01-02"
                 },
                 "title": {
                     "type": "string",
@@ -1246,6 +1302,10 @@
         "models.OrderBody": {
             "type": "object",
             "properties": {
+                "cinema_id": {
+                    "type": "integer",
+                    "example": 1
+                },
                 "cinema_name": {
                     "type": "string",
                     "example": "Hiflix"
@@ -1253,6 +1313,14 @@
                 "date": {
                     "type": "string",
                     "example": "2006-01-02"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "doni@mail.com"
+                },
+                "firstname": {
+                    "type": "string",
+                    "example": "doni"
                 },
                 "genre": {
                     "type": "string",
@@ -1269,6 +1337,14 @@
                 "movie_cinema_id": {
                     "type": "integer",
                     "example": 1
+                },
+                "movie_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "phone_number": {
+                    "type": "string",
+                    "example": "+6232574365"
                 },
                 "quantity": {
                     "type": "integer",
@@ -1291,6 +1367,10 @@
                 "total_price": {
                     "type": "integer",
                     "example": 90000
+                },
+                "user_id": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
